<resources>
    <string name="app_name" translatable="false">Smart_Alert</string>
    <string name="smart_alert" translatable="false">Smart Alert</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="password_register">Password</string>
    <string name="password_repeat">Password</string>
    <string name="e_mail_registration">E-mail</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="back">back</string>
    <string name="welcome">Welcome</string>
    <string name="choose_the_incident">Choose the incident:</string>
    <string name="fire">Fire</string>
    <string name="earthquake">Earthquake</string>
    <string name="flood">Flood</string>
    <string name="something_else">Something else</string>
    <string name="messages">Messages</string>
    <string name="incident">Incident:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="describe_the_incident">Describe the incident</string>
    <string name="choose_image">Choose image:</string>
    <string name="upload">Upload</string>
    <string name="send">Send</string>
    <string name="welcome_Employee">Welcome</string>
    <string name="choose_an_activity">Choose an activity:</string>
    <string name="view_messages">View messages</string>
    <string name="compose_message">Compose message</string>
    <string name="log_out">Log out</string>
    <string name="messages_Employee">Messages</string>
    <string name="no_messages">No messages</string>
    <string name="incident_from_user">incident from user</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="report_incident">Report Incident</string>
    <string name="date_employee">Date</string>
    <string name="time_employee">Time</string>
    <string name="latitude_employee">Latitude</string>
    <string name="longitude_employee">Longitude</string>
    <string name="distance">Distance</string>
    <string name="send_employee">Send</string>
    <string name="describe_the_incident_employee">Describe the incident</string>
    <string name="delete_all">Delete All</string>
    <string name="toast_message_required">The description and the image are required.</string>
    <string name="toast_message_success">Message sent successfully!</string>
    <string name="message_saved_successfully">Message saved successfully</string>
    <string name="failed_to_save_message">Failed to save message</string>
    <string name="upload_successful">Upload successful</string>
    <string name="permission_denied_redirect">Permission Denied! Redirecting to login…</string>
    <string name="exit_confirmation_title">Exit Confirmation</string>
    <string name="exit_confirmation_message">Are you sure you want to exit?</string>
    <string name="exit_confirmation_positive">Yes</string>
    <string name="exit_confirmation_negative">No</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="login_success">Successful login!</string>
    <string name="login_failure">Email or Password wrong. Please Try Again!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="restricted_email_domain">You can\'t register gov.gr email</string>
    <string name="password_length_error">Your password must be greater than 5 digits!</string>
    <string name="passwords_do_not_match">The passwords don\'t match</string>
    <string name="registration_success">Registration Completed Successfully!</string>
    <string name="registration_failure">Registration Failed! Please try again.</string>
    <string name="redirecting_to_compose_message">Redirecting to compose the message…</string>
    <string name="error_loading_image">Error loading latest image: %1$s</string>
    <string name="delete_message_title">Delete Message</string>
    <string name="delete_message_confirmation">Are you sure you want to delete this message?</string>
    <string name="last_image_deleted_successfully">Image deleted successfully</string>
    <string name="failed_to_delete_last_image">Failed to delete the last image</string>
    <string name="message_deleted">Message deleted</string>
    <string name="failed_to_delete_message">Failed to delete message</string>
    <string name="no_message_to_delete">No message to delete</string>
    <string name="delete_all_messages_title">Delete All Messages</string>
    <string name="delete_all_messages_confirmation">Are you sure you want to delete all messages from your inbox? Note that you can\'t retrieve them back if you want.</string>
    <string name="all_messages_deleted">All messages deleted</string>
    <string name="failed_to_delete_messages">Failed to delete messages</string>
    <string name="error_deleting_image">Error deleting image: %1$s</string>
    <string name="all_images_deleted_successfully">All images deleted successfully</string>
    <string name="failed_to_list_images_for_deletion">Failed to list images for deletion: %1$s</string>
    <string name="all_fields_required">All fields are required to send the message</string>
    <string name="db_failure" translatable="false">Failed to save data to the database.</string>
    <string name="usage_statistics">Usage Statistics</string>
    <string name="sent_messages">Sent Messages:</string>
    <string name="received_messages">Received Messages:</string>
    <string name="statistics">Statistics</string>
    <string name="alert_title">Messages</string>
    <string name="alert_message">No messages available.</string>
    <string name="redirecting_message">Redirecting to compose the message…</string>
    <string name="emergency_title">EMERGENCY!</string>
</resources>