<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context=".Register">

    <EditText
        android:id="@+id/editTextTextPasswordRegister"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/round_fields"
        android:ems="10"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:drawableStart="@drawable/baseline_visibility_off_24"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPasswordRegisterRepeat"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="389dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="293dp"
        android:background="@drawable/round_fields"
        android:ems="10"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:drawableStart="@drawable/baseline_visibility_off_24"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddressRegister"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="464dp"
        android:background="@drawable/round_fields"
        android:ems="10"
        android:hint="@string/e_mail_registration"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="604dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="148dp"
        android:layout_height="57dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="499dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="175dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_back"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="625dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="48dp"
        android:background="@color/white"
        android:contentDescription="@string/back"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />
</androidx.constraintlayout.widget.ConstraintLayout>