<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ComposeMessage">

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="748dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonLoginEmployeeExit"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="647dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="back"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="329dp"
        android:layout_height="550dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTextMultiLine_description"
                android:layout_width="240dp"
                android:layout_height="68dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="433dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="49dp"
                android:background="@drawable/round_fields"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/describe_the_incident_employee"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextText_reportIncident"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="447dp"
                android:ems="10"
                android:hint="@string/report_incident"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="241dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="264dp"
                android:ems="10"
                android:hint="@string/date_employee"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="302dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="203dp"
                android:ems="10"
                android:hint="@string/time_employee"
                android:inputType="time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNumber_latitude"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="117dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="388dp"
                android:ems="10"
                android:hint="@string/latitude_employee"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNumber_longitude"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="325dp"
                android:ems="10"
                android:hint="@string/longitude_employee"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextDistance"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="57dp"
                android:layout_marginTop="359dp"
                android:layout_marginEnd="62dp"
                android:layout_marginBottom="146dp"
                android:ems="10"
                android:hint="@string/distance"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_sendEmployee"
        android:layout_width="145dp"
        android:layout_height="54dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="645dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="32dp"
        android:text="@string/send_employee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>