<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".IncidentEmployee">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="614dp"
        android:text="@string/messages_Employee"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonIncidentEmployeeExit"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="647dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="back"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="329dp"
        android:layout_height="400dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="395dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="94dp"
                    android:layout_marginTop="98dp"
                    android:layout_marginBottom="270dp"
                    android:text="@string/no_messages"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_incidentImage"
                    android:layout_width="178dp"
                    android:layout_height="156dp"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="208dp"
                    android:layout_marginEnd="105dp"
                    android:layout_marginBottom="59dp"
                    android:contentDescription="@string/incident_from_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_accept"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="103dp"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="103dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_deleteAll"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="103dp"
        android:text="@string/delete_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>